--- a/games/index.html
+++ b/games/index.html
@@ -19,8 +19,8 @@
 		<div class="container">
 			<!-- Top Navigation -->
 			<div class="codrops-top clearfix">
-				<a class="codrops-icon codrops-icon-prev" href=".."><span>Back to portfolio</span></a>
-				<span class="right"><a class="codrops-icon codrops-icon-drop" href="http://tympanus.net/codrops/?p=19242"><span>Back to the Codrops Article</span></a></span>
+				<a class="codrops-icon codrops-icon-prev" href=".."><span>Home</span></a>
+				<span class="right"><a class="codrops-icon codrops-icon-drop" href="../who_am_i"><span>Who am I ?</span></a></span>
 			</div>
 			<div id="boxgallery" class="boxgallery" data-effect="effect-1">
 				<div class="panel"><img src="img/1.jpg" alt="Image 1"/></div>
