--- a/index.html
+++ b/index.html
@@ -21,102 +21,69 @@
 		<div class="container">
 			<!-- Top Navigation -->
 			<div class="codrops-top clearfix">
-				<a class="codrops-icon codrops-icon-prev" href="http://tympanus.net/Development/SVGDrawingAnimation/"><span>Previous Demo</span></a>
-				<span class="right"><a href="http://cargocollective.com/isaac317">Artwork by Isaac Montemayor</a><a class="codrops-icon codrops-icon-drop" href="who_am_i"><span>Who am I ?</span></a></span>
+				<a class="codrops-icon codrops-icon-prev" href="who_am_i"><span>Who am I ?</span></a>
+				<span class="right"><a class="codrops-icon codrops-icon-drop" href="games"><span>Browse games</span></a></span>
 			</div>
-			<!--header class="codrops-header">
-				<h1>Shape Hover Effect with SVG<span>Recreating the effect as seen on <a href="http://christmasexperiments.com/">The Christmas Experiments</a></span></h1>
-				<nav class="codrops-demos">
+			<header class="codrops-header">
+				<h1>Mathieu Bédu<span>Game programmer</span></h1>
+				<!--nav class="codrops-demos">
 					<a href="index.html">Demo 1</a>
 					<a class="current-demo" href="index2.html">Demo 2</a>
 					<a href="index3.html">Demo 3</a>
-				</nav>
-			</header-->
+				</nav-->
+			</header>
 			<section id="grid" class="grid clearfix">
-				<a href="games_big" data-path-hover="m 0,0 0,47.7775 c 24.580441,3.12569 55.897012,-8.199417 90,-8.199417 34.10299,0 65.41956,11.325107 90,8.199417 L 180,0 z">
+				<a href="games" data-path-hover="m 0,0 0,47.7775 c 24.580441,3.12569 55.897012,-8.199417 90,-8.199417 34.10299,0 65.41956,11.325107 90,8.199417 L 180,0 z">
 					<figure>
-						<img src="img/2.png" />
+						<img src="img/Crazy Miner.png" />
 						<svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="m 0,0 0,171.14385 c 24.580441,15.47138 55.897012,24.75772 90,24.75772 34.10299,0 65.41956,-9.28634 90,-24.75772 L 180,0 0,0 z"/></svg>
 						<figcaption>
-							<h2>Crystalline</h2>
+							<h2>Crazy Miner</h2>
 							<p>Soko radicchio bunya nuts gram dulse.</p>
 							<button>View</button>
 						</figcaption>
 					</figure>
 				</a>
-				<a href="#" data-path-hover="m 0,0 0,47.7775 c 24.580441,3.12569 55.897012,-8.199417 90,-8.199417 34.10299,0 65.41956,11.325107 90,8.199417 L 180,0 z">
+				<a href="games" data-path-hover="m 0,0 0,47.7775 c 24.580441,3.12569 55.897012,-8.199417 90,-8.199417 34.10299,0 65.41956,11.325107 90,8.199417 L 180,0 z">
 					<figure>
-						<img src="img/4.png" />
+						<img src="img/Trak.png" />
 						<svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="m 0,0 0,171.14385 c 24.580441,15.47138 55.897012,24.75772 90,24.75772 34.10299,0 65.41956,-9.28634 90,-24.75772 L 180,0 0,0 z"/></svg>
 						<figcaption>
-							<h2>Cacophony</h2>
+							<h2>Trak</h2>
 							<p>Two greens tigernut soybean radish artichoke.</p>
 							<button>View</button>
 						</figcaption>
 					</figure>
 				</a>
-				<a href="#" data-path-hover="m 0,0 0,47.7775 c 24.580441,3.12569 55.897012,-8.199417 90,-8.199417 34.10299,0 65.41956,11.325107 90,8.199417 L 180,0 z">
+				<a href="games" data-path-hover="m 0,0 0,47.7775 c 24.580441,3.12569 55.897012,-8.199417 90,-8.199417 34.10299,0 65.41956,11.325107 90,8.199417 L 180,0 z">
 					<figure>
-						<img src="img/6.png" />
+						<img src="img/Fortress.png" />
 						<svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="m 0,0 0,171.14385 c 24.580441,15.47138 55.897012,24.75772 90,24.75772 34.10299,0 65.41956,-9.28634 90,-24.75772 L 180,0 0,0 z"/></svg>
 						<figcaption>
-							<h2>Languid</h2>
+							<h2>Fortress of Awe</h2>
 							<p>Beetroot water spinach okra water chestnut.</p>
 							<button>View</button>
 						</figcaption>
 					</figure>
 				</a>
-				<a href="#" data-path-hover="m 0,0 0,47.7775 c 24.580441,3.12569 55.897012,-8.199417 90,-8.199417 34.10299,0 65.41956,11.325107 90,8.199417 L 180,0 z">
+				<a href="games" data-path-hover="m 0,0 0,47.7775 c 24.580441,3.12569 55.897012,-8.199417 90,-8.199417 34.10299,0 65.41956,11.325107 90,8.199417 L 180,0 z">
 					<figure>
-						<img src="img/8.png" />
+						<img src="img/riasec.png" />
 						<svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="m 0,0 0,171.14385 c 24.580441,15.47138 55.897012,24.75772 90,24.75772 34.10299,0 65.41956,-9.28634 90,-24.75772 L 180,0 0,0 z"/></svg>
 						<figcaption>
-							<h2>Serene</h2>
+							<h2>RIASEC - Social</h2>
 							<p>Water spinach arugula pea tatsoi.</p>
 							<button>View</button>
 						</figcaption>
 					</figure>
 				</a>
-				<a href="#" data-path-hover="m 0,0 0,47.7775 c 24.580441,3.12569 55.897012,-8.199417 90,-8.199417 34.10299,0 65.41956,11.325107 90,8.199417 L 180,0 z">
+				<a href="games" data-path-hover="m 0,0 0,47.7775 c 24.580441,3.12569 55.897012,-8.199417 90,-8.199417 34.10299,0 65.41956,11.325107 90,8.199417 L 180,0 z">
 					<figure>
 						<img src="img/1.png" />
 						<svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="m 0,0 0,171.14385 c 24.580441,15.47138 55.897012,24.75772 90,24.75772 34.10299,0 65.41956,-9.28634 90,-24.75772 L 180,0 0,0 z"/></svg>
 						<figcaption>
-							<h2>Nebulous</h2>
+							<h2>Straw, Berry !</h2>
 							<p>Pea horseradish azuki bean lettuce.</p>
-							<button>View</button>
-						</figcaption>
-					</figure>
-				</a>
-				<a href="#" data-path-hover="m 0,0 0,47.7775 c 24.580441,3.12569 55.897012,-8.199417 90,-8.199417 34.10299,0 65.41956,11.325107 90,8.199417 L 180,0 z">
-					<figure>
-						<img src="img/3.png" />
-						<svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="m 0,0 0,171.14385 c 24.580441,15.47138 55.897012,24.75772 90,24.75772 34.10299,0 65.41956,-9.28634 90,-24.75772 L 180,0 0,0 z"/></svg>
-						<figcaption>
-							<h2>Iridescent</h2>
-							<p>A grape silver beet watercress potato.</p>
-							<button>View</button>
-						</figcaption>
-					</figure>
-				</a>
-				<a href="#" data-path-hover="m 0,0 0,47.7775 c 24.580441,3.12569 55.897012,-8.199417 90,-8.199417 34.10299,0 65.41956,11.325107 90,8.199417 L 180,0 z">
-					<figure>
-						<img src="img/5.png" />
-						<svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="m 0,0 0,171.14385 c 24.580441,15.47138 55.897012,24.75772 90,24.75772 34.10299,0 65.41956,-9.28634 90,-24.75772 L 180,0 0,0 z"/></svg>
-						<figcaption>
-							<h2>Resonant</h2>
-							<p>Chickweed okra pea winter purslane.</p>
-							<button>View</button>
-						</figcaption>
-					</figure>
-				</a>
-				<a href="#" data-path-hover="m 0,0 0,47.7775 c 24.580441,3.12569 55.897012,-8.199417 90,-8.199417 34.10299,0 65.41956,11.325107 90,8.199417 L 180,0 z">
-					<figure>
-						<img src="img/7.png" />
-						<svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="m 0,0 0,171.14385 c 24.580441,15.47138 55.897012,24.75772 90,24.75772 34.10299,0 65.41956,-9.28634 90,-24.75772 L 180,0 0,0 z"/></svg>
-						<figcaption>
-							<h2>Zenith</h2>
-							<p>Salsify taro catsear garlic gram.</p>
 							<button>View</button>
 						</figcaption>
 					</figure>
