--- a/who_am_i/index.html
+++ b/who_am_i/index.html
@@ -10,13 +10,19 @@
         <meta name="author" content="Codrops" />
         <link rel="shortcut icon" href="../favicon.ico"> 
         <link rel="stylesheet" type="text/css" href="css/demo.css" />
+        <link rel="stylesheet" type="text/css" href="css/demo2.css" />
         <link rel="stylesheet" type="text/css" href="css/style.css" />
         <link href='http://fonts.googleapis.com/css?family=Bangers' rel='stylesheet' type='text/css' />
 		<script type="text/javascript" src="js/modernizr.custom.40443.js"></script>
     </head>
     <body>
         <div class="container">
-            <div class="header">
+        	<!-- Top Navigation -->
+			<div class="codrops-top clearfix">
+				<a class="codrops-icon codrops-icon-prev" href="../"><span>Home</span></a>
+				<span class="right"><a class="codrops-icon codrops-icon-drop" href="../games"><span>Browse games</span></a></span>
+			</div>
+            <!--div class="header">
                 <a href="../">
                     <strong>&laquo; Home
                 </a>
@@ -24,7 +30,7 @@
                     <a href="../games">Browse games</a>
                 </span>
                 <div class="clr"></div>
-            </div>
+            </div-->
             <!--h1>Typography Effects with <span>CSS3 and jQuery</span></h1-->
 			<!--p class="demos">
 				<a href="index.html">Demo 1</a>
