--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 		<meta name="keywords" content="animated svg, hover effect, grid, svg shape html, " />
 		<meta name="author" content="Codrops" />
 		<link rel="shortcut icon" href="../favicon.ico">
-		<link rel="stylesheet" type="text/css" href="css/normalize.css" />
-		<link rel="stylesheet" type="text/css" href="css/demo.css" />
-		<link rel="stylesheet" type="text/css" href="css/component.css" />
-		<script src="js/snap.svg-min.js"></script>
+		<link rel="stylesheet" type="text/css" href="home/css/normalize.css" />
+		<link rel="stylesheet" type="text/css" href="home/css/demo.css" />
+		<link rel="stylesheet" type="text/css" href="home/css/component.css" />		
+		<script src="home/js/snap.svg-min.js"></script>
 		<!--[if IE]>
   		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
@@ -21,11 +21,13 @@
 		<div class="container">
 			<!-- Top Navigation -->
 			<div class="codrops-top clearfix">
-				<a class="codrops-icon codrops-icon-prev" href="who_am_i"><span>Who am I ?</span></a>
-				<span class="right"><a class="codrops-icon codrops-icon-drop" href="games"><span>Browse games</span></a></span>
+				<a href="who_am_i">Who am I ?</a>
+				<span class="right"><a href="games">Browse games</a></span>
 			</div>
+			
 			<header class="codrops-header">
-				<h1>Mathieu Bédu<span>Game programmer</span></h1>
+			
+				<h1>Mathieu Bédu<span>Embedded Game Programmer</span></h1>
 				<!--nav class="codrops-demos">
 					<a href="index.html">Demo 1</a>
 					<a class="current-demo" href="index2.html">Demo 2</a>
@@ -35,29 +37,43 @@
 			<section id="grid" class="grid clearfix">
 				<a href="games" data-path-hover="m 0,0 0,47.7775 c 24.580441,3.12569 55.897012,-8.199417 90,-8.199417 34.10299,0 65.41956,11.325107 90,8.199417 L 180,0 z">
 					<figure>
-						<img src="img/Crazy Miner.png" />
+						<img src="home/img/Crazy Miner.png" />
 						<svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="m 0,0 0,171.14385 c 24.580441,15.47138 55.897012,24.75772 90,24.75772 34.10299,0 65.41956,-9.28634 90,-24.75772 L 180,0 0,0 z"/></svg>
 						<figcaption>
 							<h2>Crazy Miner</h2>
-							<p>Soko radicchio bunya nuts gram dulse.</p>
+							<p>A procedural arcade game developped for Gameloft.</p>
+							<p><img src="home/img/medal.jpg" height="70" /></p>
 							<button>View</button>
 						</figcaption>
 					</figure>
 				</a>
 				<a href="games" data-path-hover="m 0,0 0,47.7775 c 24.580441,3.12569 55.897012,-8.199417 90,-8.199417 34.10299,0 65.41956,11.325107 90,8.199417 L 180,0 z">
 					<figure>
-						<img src="img/Trak.png" />
+						<img src="home/img/Trak.png" />
 						<svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="m 0,0 0,171.14385 c 24.580441,15.47138 55.897012,24.75772 90,24.75772 34.10299,0 65.41956,-9.28634 90,-24.75772 L 180,0 0,0 z"/></svg>
 						<figcaption>
 							<h2>Trak</h2>
-							<p>Two greens tigernut soybean radish artichoke.</p>
+							<p>A musical casual game developped for 3DDUO.</p>
+							<p><img src="home/img/medal.jpg" height="70" /></p>
+							<button>View</button>
+						</figcaption>
+					</figure>
+				</a>
+				
+				<a href="games" data-path-hover="m 0,0 0,47.7775 c 24.580441,3.12569 55.897012,-8.199417 90,-8.199417 34.10299,0 65.41956,11.325107 90,8.199417 L 180,0 z">
+					<figure>
+						<img src="home/img/riasec.png" />
+						<svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="m 0,0 0,171.14385 c 24.580441,15.47138 55.897012,24.75772 90,24.75772 34.10299,0 65.41956,-9.28634 90,-24.75772 L 180,0 0,0 z"/></svg>
+						<figcaption>
+							<h2>RIASEC - Social</h2>
+							<p>A serious party game developped for ONISEP.</p>
 							<button>View</button>
 						</figcaption>
 					</figure>
 				</a>
 				<a href="games" data-path-hover="m 0,0 0,47.7775 c 24.580441,3.12569 55.897012,-8.199417 90,-8.199417 34.10299,0 65.41956,11.325107 90,8.199417 L 180,0 z">
 					<figure>
-						<img src="img/Fortress.png" />
+						<img src="home/img/Fortress.png" />
 						<svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="m 0,0 0,171.14385 c 24.580441,15.47138 55.897012,24.75772 90,24.75772 34.10299,0 65.41956,-9.28634 90,-24.75772 L 180,0 0,0 z"/></svg>
 						<figcaption>
 							<h2>Fortress of Awe</h2>
@@ -68,22 +84,22 @@
 				</a>
 				<a href="games" data-path-hover="m 0,0 0,47.7775 c 24.580441,3.12569 55.897012,-8.199417 90,-8.199417 34.10299,0 65.41956,11.325107 90,8.199417 L 180,0 z">
 					<figure>
-						<img src="img/riasec.png" />
+						<img src="home/img/1.png" />
 						<svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="m 0,0 0,171.14385 c 24.580441,15.47138 55.897012,24.75772 90,24.75772 34.10299,0 65.41956,-9.28634 90,-24.75772 L 180,0 0,0 z"/></svg>
 						<figcaption>
-							<h2>RIASEC - Social</h2>
-							<p>Water spinach arugula pea tatsoi.</p>
+							<h2>Straw, Berry !</h2>
+							<p>You control a strawberry in this game developped in 28 hours.</p>
 							<button>View</button>
 						</figcaption>
 					</figure>
 				</a>
 				<a href="games" data-path-hover="m 0,0 0,47.7775 c 24.580441,3.12569 55.897012,-8.199417 90,-8.199417 34.10299,0 65.41956,11.325107 90,8.199417 L 180,0 z">
 					<figure>
-						<img src="img/1.png" />
+						<img src="home/img/1.png" />
 						<svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="m 0,0 0,171.14385 c 24.580441,15.47138 55.897012,24.75772 90,24.75772 34.10299,0 65.41956,-9.28634 90,-24.75772 L 180,0 0,0 z"/></svg>
 						<figcaption>
-							<h2>Straw, Berry !</h2>
-							<p>Pea horseradish azuki bean lettuce.</p>
+							<h2>Soon !</h2>
+							<p>More games are coming !<br>I work for it about 666 hours a day.</p>
 							<button>View</button>
 						</figcaption>
 					</figure>
@@ -95,6 +111,7 @@
 				<div><a href="http://tympanus.net/Development/AnimatedSVGIcons/"><h4>Animated SVG Icons</h4></a></div>
 			</section>
 		</div><!-- /container -->
+		
 		<script>
 			(function() {
 	
