--- a/who_am_i/index.html
+++ b/who_am_i/index.html
@@ -8,9 +8,9 @@
         <meta name="description" content="Typography Effects with CSS3 and jQuery" />
         <meta name="keywords" content="typography, css3, effect, lettering, letters, transition, jquery" />
         <meta name="author" content="Codrops" />
-        <link rel="shortcut icon" href="../favicon.ico"> 
-        <link rel="stylesheet" type="text/css" href="css/demo.css" />
-        <link rel="stylesheet" type="text/css" href="css/demo2.css" />
+        <link rel="shortcut icon" href="../favicon.ico">
+        <link rel="stylesheet" type="text/css" href="../home/css/demo.css" />
+		<link rel="stylesheet" type="text/css" href="css/demo.css" />
         <link rel="stylesheet" type="text/css" href="css/style.css" />
         <link href='http://fonts.googleapis.com/css?family=Bangers' rel='stylesheet' type='text/css' />
 		<script type="text/javascript" src="js/modernizr.custom.40443.js"></script>
@@ -18,9 +18,9 @@
     <body>
         <div class="container">
         	<!-- Top Navigation -->
-			<div class="codrops-top clearfix">
-				<a class="codrops-icon codrops-icon-prev" href="../"><span>Home</span></a>
-				<span class="right"><a class="codrops-icon codrops-icon-drop" href="../games"><span>Browse games</span></a></span>
+			<div class="codrops-top clearfix" style="font-size: 1.2em; font-family: 'Lato', Arial, sans-serif;">
+				<a href="..">Home</a>
+				<span class="right"><a href="../games">Browse games</a></span>
 			</div>
             <!--div class="header">
                 <a href="../">
@@ -42,19 +42,35 @@
 				<a href="index7.html">Demo 7</a>
 			</p-->
             <div id="letter-container" class="letter-container">
+				<!--p style="color: #ffd9df;">They call me the</p-->
 				<h2>
-					<a href="#">let's_code_it</a>
+					<a href="#">Prog-Man</a>
 				</h2>
+				
 			</div>
 			<div class="content">
+			
 				<p>
 					Hello, I'm a programmer.
 				</p>
 				<p>
 					I like games, so I love making good games.
+					BLA<br>
+					BLA<br>
+					BLA<br>
+					BLA<br>
+					BLA<br>
+					BLA<br>
+					BLA<br>
 				</p>
 				<p>
-					<a style="color: #47032c" href="CV.pdf" download>→ Here's my CV ←</a>
+					Click on my face for my resume<br><span style="font-size: 28px; font-weight: bold;">↓</span>
+					<a style="color: #47032c" href="CV.pdf" download>
+						<div id="photo"><img src="images/blank.png"/></div>
+					</a>
+				</p>
+				<p>
+					
 				</p>
 			</div>
 			<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
