--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
 				<a href="who_am_i">Who am I ?</a>
 				<span class="right"><a href="games">Browse games</a></span>
 			</div>
-			
+			<div class="ip-slideshow-wrapper">
+				<nav>
+					<span class="ip-nav-left"></span>
+					<span class="ip-nav-right"></span>
+				</nav>
+				<div class="ip-slideshow"></div>
+			</div>
 			<header class="codrops-header">
-			
-				<h1>Mathieu Bédu<span>Embedded Game Programmer</span></h1>
-				<!--nav class="codrops-demos">
-					<a href="index.html">Demo 1</a>
-					<a class="current-demo" href="index2.html">Demo 2</a>
-					<a href="index3.html">Demo 3</a>
-				</nav-->
+				<h1>Mathieu Bédu<span>It's a game. Make it juicier</span></h1>
 			</header>
 			<section id="grid" class="grid clearfix">
 				<a href="games" data-path-hover="m 0,0 0,47.7775 c 24.580441,3.12569 55.897012,-8.199417 90,-8.199417 34.10299,0 65.41956,11.325107 90,8.199417 L 180,0 z">
@@ -93,25 +93,19 @@
 						</figcaption>
 					</figure>
 				</a>
-				<a href="games" data-path-hover="m 0,0 0,47.7775 c 24.580441,3.12569 55.897012,-8.199417 90,-8.199417 34.10299,0 65.41956,11.325107 90,8.199417 L 180,0 z">
+				<a data-path-hover="m 0,0 0,47.7775 c 24.580441,3.12569 55.897012,-8.199417 90,-8.199417 34.10299,0 65.41956,11.325107 90,8.199417 L 180,0 z">
 					<figure>
 						<img src="home/img/1.png" />
 						<svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="m 0,0 0,171.14385 c 24.580441,15.47138 55.897012,24.75772 90,24.75772 34.10299,0 65.41956,-9.28634 90,-24.75772 L 180,0 0,0 z"/></svg>
 						<figcaption>
 							<h2>Soon !</h2>
 							<p>More games are coming !<br>I work for it about 666 hours a day.</p>
-							<button>View</button>
 						</figcaption>
 					</figure>
 				</a>
 			</section>
-			<section class="related">
-				<p>If you enjoyed these effects you might also like:</p>
-				<div><a href="http://tympanus.net/Tutorials/CaptionHoverEffects/"><h4>Caption Hover Effects</h4></a></div>
-				<div><a href="http://tympanus.net/Development/AnimatedSVGIcons/"><h4>Animated SVG Icons</h4></a></div>
-			</section>
 		</div><!-- /container -->
-		
+		<script src="particles/js/particlesSlideshow.js"></script>
 		<script>
 			(function() {
 	
