--- a/games/index.html
+++ b/games/index.html
@@ -10,6 +10,7 @@
 		<meta name="author" content="Codrops" />
 		<link rel="shortcut icon" href="../favicon.ico">
 		<link href='http://fonts.googleapis.com/css?family=Raleway:200,400,600' rel='stylesheet' type='text/css'>
+		<link rel="stylesheet" type="text/css" href="../home/css/demo.css" />
 		<link rel="stylesheet" type="text/css" href="css/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="css/demo.css" />
 		<link rel="stylesheet" type="text/css" href="css/component.css" />
@@ -18,9 +19,9 @@
 	<body>
 		<div class="container">
 			<!-- Top Navigation -->
-			<div class="codrops-top clearfix">
-				<a class="codrops-icon codrops-icon-prev" href=".."><span>Home</span></a>
-				<span class="right"><a class="codrops-icon codrops-icon-drop" href="../who_am_i"><span>Who am I ?</span></a></span>
+			<div class="codrops-top clearfix" style="font-size: 1.2em; font-family: 'Lato', Arial, sans-serif;">
+				<a href="..">Home</a>
+				<span class="right"><a href="../who_am_i">Who am I ?</a></span>
 			</div>
 			<div id="boxgallery" class="boxgallery" data-effect="effect-1">
 				<div class="panel"><img src="img/1.jpg" alt="Image 1"/></div>
