--- a/who_am_i/index.html
+++ b/who_am_i/index.html
@@ -54,23 +54,22 @@
 					Hello, I'm a programmer.
 				</p>
 				<p>
-					I like games, so I love making good games.
+					I like games, so I love making good games.<br>
+					I study game programming at SUPINFOGAME.<br>
 					BLA<br>
 					BLA<br>
 					BLA<br>
-					BLA<br>
-					BLA<br>
-					BLA<br>
-					BLA<br>
+					BLA
 				</p>
 				<p>
-					Click on my face for my resume<br><span style="font-size: 28px; font-weight: bold;">↓</span>
+					Click on my face for download my resume<br><span style="font-size: 28px; font-weight: bold;">↓</span>
 					<a style="color: #47032c" href="CV.pdf" download>
 						<div id="photo"><img src="images/blank.png"/></div>
 					</a>
 				</p>
 				<p>
-					
+					Or look at it now<br><span style="font-size: 28px; font-weight: bold;">↓</span>
+					<iframe src="CV.pdf" width="800" height="1120" align="middle" style="margin-left:-160px" seamless></iframe>
 				</p>
 			</div>
 			<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
